--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
 <meta name="author" content="桀木" />
   <meta name="description" content="桀木是一名汽车工程师，也是一名IT技术爱好者！" />
 
-  <meta name="keywords" content="x64, life, Jeff" />
+  <meta name="keywords" content="x64, life, 桀木" />
 
 
 
