--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>404 page not found - x64.life</title>
+  <title>404 page not found - X64·Life</title>
   
 
 <meta name="renderer" content="webkit" />
