--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>关于 - x64.life</title>
+  <title>关于 - X64·Life</title>
   
 
 <meta name="renderer" content="webkit" />
