--- a/about/index.html
+++ b/about/index.html
@@ -93,7 +93,7 @@
 <body>
   <div id="mobile-navbar" class="mobile-navbar">
   <div class="mobile-header-logo">
-    <a href="/" class="logo">x64.life</a>
+    <a href="/" class="logo">X64·Life</a>
   </div>
   <div class="mobile-navbar-icon">
     <span></span>
@@ -214,7 +214,7 @@
     <div class="logo-wrapper">
   <a href="/" class="logo">
     
-      x64.life
+      X64·Life
     
   </a>
 </div>
