--- a/index.html
+++ b/index.html
@@ -349,7 +349,15 @@ hugo version
 </code></pre><h4 id="3-code-servervscode作为markdown编辑器">3. Code-server(vscode)作为Markdown编辑器</h4>
 <p>Code-server 的官方描述“Code-server is VS Code running on a remote server, accessible through the browser.”，它是一个运行在远端服务器上的VS Code，可以通过浏览器进行访问和操作。
 <img src="https://github.com/cdr/code-server/raw/master/doc/assets/code-server.gif" alt=""></p>
-<p>未完待续</p>
+<p>code-server在Debian 10中的安装步骤：</p>
+<ul>
+<li>从code-server的github下载最新版程序</li>
+<li>解压到任意目录,我放到/usr/local/下面</li>
+<li>建立/usr/bin/code-server 到 /usr/local/code-server/code-server的软连接</li>
+<li>启动code-server，默认IP:Port是127.0.0.1:8080，我这里通过192.168.88.150:8080无法打开code-server，启动的时候需要制定IP为0.0.0.0</li>
+</ul>
+<pre><code>code-server --auth none --bind-addr 0.0.0.0:8080
+</code></pre>
     </div>
     <div class="read-more">
       <a href="/post/hugo-github-vscode/" class="read-more-link">阅读全文</a>
