--- a/about/index.html
+++ b/about/index.html
@@ -179,7 +179,7 @@
   (function() {
     if (window.location.hostname === 'localhost') return;
     var hm = document.createElement("script"); hm.async = true;
-    hm.src = "https://hm.baidu.com/hm.js?https:\/\/hm.baidu.com\/hm.js?1562433a9828f76756c7614ab10bf2fe";
+    hm.src = "https://hm.baidu.com/hm.js?1562433a9828f76756c7614ab10bf2fe";
     var s = document.getElementsByTagName("script")[0];
     s.parentNode.insertBefore(hm, s);
   })();
