--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="#f8f5ec">
 
 
-<meta name="author" content="桀木" /><meta name="description" content="对不起，我还没想好怎么写" /><meta name="keywords" content="x64, life, 桀木" />
+<meta name="author" content="J哥" /><meta name="description" content="对不起，我还没想好怎么写" /><meta name="keywords" content="x64, life, 桀木" />
 
 
 
@@ -156,7 +156,7 @@
     <span class="heart">
       <i class="iconfont icon-heart"></i>
     </span>
-    <span class="author">桀木</span>
+    <span class="author">J哥</span>
   </span>
 </div>
     </footer>
