--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@
 <meta name="author" content="J哥" /><meta name="description" content="对不起，我还没想好怎么写" /><meta name="keywords" content="x64, life, 桀木" />
 
 
-
+<meta name="baidu-site-verification" content="BUth1NfeNd" />
 
 
 
